Fixed spacing of nav on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -205,6 +205,7 @@ textarea {
      display: flex;
      justify-content: space-around;
      width: 100%;
+     padding: 0;
    }
 
    header nav ul li {
